--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,9 @@
-Pipeline {
-    agent any 
+pipeline {
+    agent any
+    options {
+        timeout(time: 30, unit: 'MINUTES')
+        retry(3)
+    }
     stages {
         stage('chekout') {
             steps {
